idea/testData/multiModuleLineMarker/transitive/base_common/common.kt
expect fun <!LINE_MARKER("descr='Has actuals in JVM'")!>foo<!>(): Int